Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | ε

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB
   19       | VarDec LB error RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | error RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC
   27       | error RC

   28 StmtList: Stmt StmtList
   29         | ε

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | WHILE LP error RP Stmt
   37     | error SEMI

   38 DefList: Def DefList
   39        | ε

   40 Def: Specifier DecList SEMI
   41    | Specifier error SEMI

   42 DecList: Dec
   43        | Dec COMMA DecList

   44 Dec: VarDec
   45    | VarDec ASSIGNOP Exp

   46 Exp: Exp ASSIGNOP Exp
   47    | Exp AND Exp
   48    | Exp OR Exp
   49    | Exp RELOP Exp
   50    | Exp PLUS Exp
   51    | Exp MINUS Exp
   52    | Exp STAR Exp
   53    | Exp DIV Exp
   54    | LP Exp RP
   55    | MINUS Exp
   56    | NOT Exp
   57    | ID LP Args RP
   58    | ID LP RP
   59    | Exp LB Exp RB
   60    | Exp DOT ID
   61    | ID
   62    | INT
   63    | FLOAT
   64    | Exp LB Exp error RB

   65 Args: Exp COMMA Args
   66     | Exp
   67     | Exp COMMA error


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 19 22 27 36 37 41 64 67
    INT <pnode> (258) 18 62
    FLOAT <pnode> (259) 63
    ID <pnode> (260) 14 16 17 20 21 57 58 60 61
    SEMI <pnode> (261) 4 5 7 30 32 37 40 41
    COMMA <pnode> (262) 9 23 43 65 67
    ASSIGNOP <pnode> (263) 45 46
    RELOP <pnode> (264) 49
    PLUS <pnode> (265) 50
    MINUS <pnode> (266) 51 55
    STAR <pnode> (267) 52
    DIV <pnode> (268) 53
    AND <pnode> (269) 47
    OR <pnode> (270) 48
    DOT <pnode> (271) 60
    NOT <pnode> (272) 56
    TYPE <pnode> (273) 10
    LP <pnode> (274) 20 21 33 34 35 36 54 57 58
    RP <pnode> (275) 20 21 22 33 34 35 36 54 57 58
    LB <pnode> (276) 18 19 59 64
    RB <pnode> (277) 18 19 59 64
    LC <pnode> (278) 12 26
    RC <pnode> (279) 12 26 27
    STRUCT <pnode> (280) 12 13
    RETURN <pnode> (281) 32
    IF <pnode> (282) 33 34
    ELSE <pnode> (283) 34
    WHILE <pnode> (284) 35 36
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <pnode> (32)
        on left: 1
        on right: 0
    ExtDefList <pnode> (33)
        on left: 2 3
        on right: 1 2
    ExtDef <pnode> (34)
        on left: 4 5 6 7
        on right: 2
    ExtDecList <pnode> (35)
        on left: 8 9
        on right: 4 9
    Specifier <pnode> (36)
        on left: 10 11
        on right: 4 5 6 25 40 41
    StructSpecifier <pnode> (37)
        on left: 12 13
        on right: 11
    OptTag <pnode> (38)
        on left: 14 15
        on right: 12
    Tag <pnode> (39)
        on left: 16
        on right: 13
    VarDec <pnode> (40)
        on left: 17 18 19
        on right: 8 9 18 19 25 44 45
    FunDec <pnode> (41)
        on left: 20 21 22
        on right: 6
    VarList <pnode> (42)
        on left: 23 24
        on right: 20 23
    ParamDec <pnode> (43)
        on left: 25
        on right: 23 24
    CompSt <pnode> (44)
        on left: 26 27
        on right: 6 31
    StmtList <pnode> (45)
        on left: 28 29
        on right: 26 28
    Stmt <pnode> (46)
        on left: 30 31 32 33 34 35 36 37
        on right: 28 33 34 35 36
    DefList <pnode> (47)
        on left: 38 39
        on right: 12 26 38
    Def <pnode> (48)
        on left: 40 41
        on right: 38
    DecList <pnode> (49)
        on left: 42 43
        on right: 40 43
    Dec <pnode> (50)
        on left: 44 45
        on right: 42 43
    Exp <pnode> (51)
        on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
        on right: 30 32 33 34 35 45 46 47 48 49 50 51 52 53 54 55 56 59 60 64 65 66 67
    Args <pnode> (52)
        on left: 65 66 67
        on right: 57 65


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error • SEMI

    SEMI  shift, and go to state 9


State 2

   10 Specifier: TYPE •

    $default  reduce using rule 10 (Specifier)


State 3

   12 StructSpecifier: STRUCT • OptTag LC DefList RC
   13                | STRUCT • Tag

    ID  shift, and go to state 10

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   11 Specifier: StructSpecifier •

    $default  reduce using rule 11 (Specifier)


State 9

    7 ExtDef: error SEMI •

    $default  reduce using rule 7 (ExtDef)


State 10

   14 OptTag: ID •
   16 Tag: ID •

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 11

   12 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 21


State 12

   13 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 13 (StructSpecifier)


State 13

    0 $accept: Program $end •

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 15

   22 FunDec: error • RP

    RP  shift, and go to state 22


State 16

   17 VarDec: ID •
   20 FunDec: ID • LP VarList RP
   21       | ID • LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 17 (VarDec)


State 17

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 24


State 19

    8 ExtDecList: VarDec •
    9           | VarDec • COMMA ExtDecList
   18 VarDec: VarDec • LB INT RB
   19       | VarDec • LB error RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 8 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec • CompSt

    error  shift, and go to state 27
    LC     shift, and go to state 28

    CompSt  go to state 29


State 21

   12 StructSpecifier: STRUCT OptTag LC • DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 31
    Def              go to state 32


State 22

   22 FunDec: error RP •

    $default  reduce using rule 22 (FunDec)


State 23

   20 FunDec: ID LP • VarList RP
   21       | ID LP • RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 33
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 35
    ParamDec         go to state 36


State 24

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 25

    9 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 19


State 26

   18 VarDec: VarDec LB • INT RB
   19       | VarDec LB • error RB

    error  shift, and go to state 39
    INT    shift, and go to state 40


State 27

   27 CompSt: error • RC

    RC  shift, and go to state 41


State 28

   26 CompSt: LC • DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 42
    Def              go to state 32


State 29

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 30

   40 Def: Specifier • DecList SEMI
   41    | Specifier • error SEMI

    error  shift, and go to state 43
    ID     shift, and go to state 37

    VarDec   go to state 44
    DecList  go to state 45
    Dec      go to state 46


State 31

   12 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 47


State 32

   38 DefList: Def • DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 48
    Def              go to state 32


State 33

   21 FunDec: ID LP RP •

    $default  reduce using rule 21 (FunDec)


State 34

   25 ParamDec: Specifier • VarDec

    ID  shift, and go to state 37

    VarDec  go to state 49


State 35

   20 FunDec: ID LP VarList • RP

    RP  shift, and go to state 50


State 36

   23 VarList: ParamDec • COMMA VarList
   24        | ParamDec •

    COMMA  shift, and go to state 51

    $default  reduce using rule 24 (VarList)


State 37

   17 VarDec: ID •

    $default  reduce using rule 17 (VarDec)


State 38

    9 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 9 (ExtDecList)


State 39

   19 VarDec: VarDec LB error • RB

    RB  shift, and go to state 52


State 40

   18 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 53


State 41

   27 CompSt: error RC •

    $default  reduce using rule 27 (CompSt)


State 42

   26 CompSt: LC DefList • StmtList RC

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    MINUS   shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60
    LC      shift, and go to state 28
    RETURN  shift, and go to state 61
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 64
    StmtList  go to state 65
    Stmt      go to state 66
    Exp       go to state 67


State 43

   41 Def: Specifier error • SEMI

    SEMI  shift, and go to state 68


State 44

   18 VarDec: VarDec • LB INT RB
   19       | VarDec • LB error RB
   44 Dec: VarDec •
   45    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 69
    LB        shift, and go to state 26

    $default  reduce using rule 44 (Dec)


State 45

   40 Def: Specifier DecList • SEMI

    SEMI  shift, and go to state 70


State 46

   42 DecList: Dec •
   43        | Dec • COMMA DecList

    COMMA  shift, and go to state 71

    $default  reduce using rule 42 (DecList)


State 47

   12 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 12 (StructSpecifier)


State 48

   38 DefList: Def DefList •

    $default  reduce using rule 38 (DefList)


State 49

   18 VarDec: VarDec • LB INT RB
   19       | VarDec • LB error RB
   25 ParamDec: Specifier VarDec •

    LB  shift, and go to state 26

    $default  reduce using rule 25 (ParamDec)


State 50

   20 FunDec: ID LP VarList RP •

    $default  reduce using rule 20 (FunDec)


State 51

   23 VarList: ParamDec COMMA • VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 72
    ParamDec         go to state 36


State 52

   19 VarDec: VarDec LB error RB •

    $default  reduce using rule 19 (VarDec)


State 53

   18 VarDec: VarDec LB INT RB •

    $default  reduce using rule 18 (VarDec)


State 54

   27 CompSt: error • RC
   37 Stmt: error • SEMI

    SEMI  shift, and go to state 73
    RC    shift, and go to state 41


State 55

   62 Exp: INT •

    $default  reduce using rule 62 (Exp)


State 56

   63 Exp: FLOAT •

    $default  reduce using rule 63 (Exp)


State 57

   57 Exp: ID • LP Args RP
   58    | ID • LP RP
   61    | ID •

    LP  shift, and go to state 74

    $default  reduce using rule 61 (Exp)


State 58

   55 Exp: MINUS • Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 75


State 59

   56 Exp: NOT • Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 76


State 60

   54 Exp: LP • Exp RP

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 77


State 61

   32 Stmt: RETURN • Exp SEMI

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 78


State 62

   33 Stmt: IF • LP Exp RP Stmt
   34     | IF • LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 79


State 63

   35 Stmt: WHILE • LP Exp RP Stmt
   36     | WHILE • LP error RP Stmt

    LP  shift, and go to state 80


State 64

   31 Stmt: CompSt •

    $default  reduce using rule 31 (Stmt)


State 65

   26 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 81


State 66

   28 StmtList: Stmt • StmtList

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    MINUS   shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60
    LC      shift, and go to state 28
    RETURN  shift, and go to state 61
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 64
    StmtList  go to state 82
    Stmt      go to state 66
    Exp       go to state 67


State 67

   30 Stmt: Exp • SEMI
   46 Exp: Exp • ASSIGNOP Exp
   47    | Exp • AND Exp
   48    | Exp • OR Exp
   49    | Exp • RELOP Exp
   50    | Exp • PLUS Exp
   51    | Exp • MINUS Exp
   52    | Exp • STAR Exp
   53    | Exp • DIV Exp
   59    | Exp • LB Exp RB
   60    | Exp • DOT ID
   64    | Exp • LB Exp error RB

    SEMI      shift, and go to state 83
    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    LB        shift, and go to state 93


State 68

   41 Def: Specifier error SEMI •

    $default  reduce using rule 41 (Def)


State 69

   45 Dec: VarDec ASSIGNOP • Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 94


State 70

   40 Def: Specifier DecList SEMI •

    $default  reduce using rule 40 (Def)


State 71

   43 DecList: Dec COMMA • DecList

    ID  shift, and go to state 37

    VarDec   go to state 44
    DecList  go to state 95
    Dec      go to state 46


State 72

   23 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 23 (VarList)


State 73

   37 Stmt: error SEMI •

    $default  reduce using rule 37 (Stmt)


State 74

   57 Exp: ID LP • Args RP
   58    | ID LP • RP

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    RP     shift, and go to state 96

    Exp   go to state 97
    Args  go to state 98


State 75

   46 Exp: Exp • ASSIGNOP Exp
   47    | Exp • AND Exp
   48    | Exp • OR Exp
   49    | Exp • RELOP Exp
   50    | Exp • PLUS Exp
   51    | Exp • MINUS Exp
   52    | Exp • STAR Exp
   53    | Exp • DIV Exp
   55    | MINUS Exp •
   59    | Exp • LB Exp RB
   60    | Exp • DOT ID
   64    | Exp • LB Exp error RB

    STAR  shift, and go to state 88
    DIV   shift, and go to state 89
    DOT   shift, and go to state 92
    LB    shift, and go to state 93

    $default  reduce using rule 55 (Exp)


State 76

   46 Exp: Exp • ASSIGNOP Exp
   47    | Exp • AND Exp
   48    | Exp • OR Exp
   49    | Exp • RELOP Exp
   50    | Exp • PLUS Exp
   51    | Exp • MINUS Exp
   52    | Exp • STAR Exp
   53    | Exp • DIV Exp
   56    | NOT Exp •
   59    | Exp • LB Exp RB
   60    | Exp • DOT ID
   64    | Exp • LB Exp error RB

    DOT  shift, and go to state 92
    LB   shift, and go to state 93

    $default  reduce using rule 56 (Exp)


State 77

   46 Exp: Exp • ASSIGNOP Exp
   47    | Exp • AND Exp
   48    | Exp • OR Exp
   49    | Exp • RELOP Exp
   50    | Exp • PLUS Exp
   51    | Exp • MINUS Exp
   52    | Exp • STAR Exp
   53    | Exp • DIV Exp
   54    | LP Exp • RP
   59    | Exp • LB Exp RB
   60    | Exp • DOT ID
   64    | Exp • LB Exp error RB

    ASSIGNOP  shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    AND       shift, and go to state 90
    OR        shift, and go to state 91
    DOT       shift, and go to state 92
    RP        shift, and go to state 99
    LB        shift, and go to state 93


State 78
